--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Will you be my Valentine? 💝</title>
+  <title>Idli 💝 Kheeri</title>
 
   <!-- Confetti library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
@@ -400,7 +400,7 @@
     </div>
     <div class="progress-text" id="progressText"></div>
 
-    <div class="hint" id="hint">Try clicking "No" if you dare... 😈</div>
+    <div class="hint" id="hint">I am not taking NO for an answer!</div>
 
     <section class="result" id="result">
       <div class="celebration-emoji">🎉</div>
@@ -411,7 +411,7 @@
         src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNjFxam41d3RwbXVmYjV2NmZqaHZvZnNwNDYwd2g0am01YW9lcjR1ZiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/1wuB5IKIsD2mbCYlmV/giphy.gif"
         alt="Cute cat with hearts"
       />
-      <p style="margin-top: 24px; font-size: 14px; color: #9e9e9e; font-style: italic;">Love From Idli To Kheeri</p>
+      <p style="margin-top: 24px; font-size: 14px; color: #9e9e9e; font-style: italic;">Love From Idli To Kheeri💝</p>
     </section>
   </main>
 
